# mftp

./: .gitignore  CMakeLists.txt  mftp.ini  mftp.manifest.md  readme.md
cmake/: uninstall.cmake.in
cmake/scripts/: setup.bash.in
cmake/systemd/: mftp.service.in
docs/: mftp.manifest.md
examples/: mftp.ini  mftp.passwd
source/: server.c  test-client.c  test-dumper.c  test-server.c
source/proto/: client_msg.c  client_msg.h  config.h  mftp.h  server_msg.c  server_msg.h  utils.c  utils.h
src/client-cli/: dumper.c
src/server/: ctx.c  ctx.h  handlers.c  handlers.h  main.c
src/shared/: allocator.h  cmd.c  cmd.h  ini.c  ini.h  list.c  list.h  passwd.c  passwd.h  socket.c  socket.h  utils.c  utils.h
